<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_intro_1"
    tools:context="com.toscoin.wallet.ui.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:weightSum="2.5">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/intro_logo" />

        </LinearLayout>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/welcome_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_wallet"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/intro_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_wallet"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/restore_wallet"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/intro_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/restore_wallet"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/test_wallet"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/intro_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/test_wallet"
                android:textColor="@color/black"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>



