<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/pay_to_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/pay_to_label"
                        android:textColor="@color/white_almost" />

                    <LinearLayout
                        android:id="@+id/send_to_address_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/pay_to_label"
                        android:layout_toLeftOf="@+id/address_button_container"
                        android:layout_toStartOf="@+id/address_button_container"
                        android:orientation="vertical">

                        <!-- TODO make android:imeOptions="actionNext" work -->
                        <android.support.v7.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/send_to_address"
                            style="@style/NormalText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:completionThreshold="1"
                            android:hint="@string/send_coins_fragment_receiving_address_tip"
                            android:imeOptions="actionNext|flagNoExtractUi"
                            android:inputType="textMultiLine|textNoSuggestions"
                            android:maxLines="1"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white_almost"
                            app:backgroundTint="@color/white" />

                        <TextView
                            android:id="@+id/address_error_message"
                            style="@style/ErrorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_error" />

                        <com.toscoin.wallet.ui.widget.AddressView
                            android:id="@+id/send_to_address_static"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/quarter_standard_margin"
                            android:visibility="gone"
                            app:show_coin_icon="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/address_button_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/send_to_address_container"
                        android:orientation="vertical">


                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/scan_qr_code"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:contentDescription="@string/scan_qr_code"
                            android:src="@drawable/qr_code"
                            app:backgroundTint="#cccccc" />

                        <ImageButton
                            android:id="@+id/erase_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/erase_address"
                            android:src="@drawable/erase"
                            android:visibility="gone" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/amount_to_send_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/amount_to_send_label"
                    android:textColor="@color/white_almost" />

                <LinearLayout
                    android:id="@+id/amounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.toscoin.wallet.ui.widget.AmountEditView
                        android:id="@+id/send_coin_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                    <com.toscoin.wallet.ui.widget.AmountEditView
                        android:id="@+id/send_local_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                </LinearLayout>

                <TextView
                    android:id="@+id/amount_error_message"
                    style="@style/ErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/amount_error" />

                <TextView
                    android:id="@+id/amount_warning_message"
                    style="@style/WarningText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/amount_warn_fees_apply" />

                <Button
                    android:id="@+id/tx_message_add_remove"
                    style="@style/BorderlessButtonLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/tx_message_public_add"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    tools:text="@string/tx_message_public_remove"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tx_message_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    android:text="@string/tx_message_public"
                    android:textColor="@color/white_almost"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tx_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:visibility="gone"
                        tools:paddingBottom="@dimen/tx_message_counter_padding"
                        tools:text="Lorem ipsum dol or sit am et, co ns ec te tur ad ipi sc ing el it. Do nec a diam le."
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tx_message_counter"
                        style="@style/NormalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tx_message"
                        android:layout_alignEnd="@id/tx_message"
                        android:layout_alignRight="@id/tx_message"
                        android:paddingBottom="@dimen/half_standard_margin"
                        android:paddingEnd="@dimen/quarter_standard_margin"
                        android:paddingRight="@dimen/quarter_standard_margin"
                        android:visibility="gone"
                        tools:ignore="RtlSymmetry"
                        tools:text="100"
                        tools:textColor="@color/fg_warning" />
                </RelativeLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/send_confirm"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:text="@string/button_send"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
